@@ -894,7 +894,7 @@ void			HUDRenderer::renderScoreboard(void)
 
   for (j = 0; j < curMaxPlayers; j++) {
     if ((rp = World::getWorld()->getPlayer(j))) {
-      if (rp->getCallSign()[0] != '@')
+      if (rp->getTeam() != ObserverTeam)
 	players[plrCount++] = j;
       else
 	players[curMaxPlayers - (++obsCount)] = j;
@@ -932,7 +932,7 @@ void			HUDRenderer::renderScoreboard(void)
       else if (player->isHunted()) huntPlayerAlive = true; // confirm hunted player is alive
     }
     if (!drewMyScore && myTank->getScore() > player->getScore() &&
-	myTank->getCallSign()[0] != '@') {
+	myTank->getTeam() != ObserverTeam) {
 	  if(getHunt() && getHuntPosition() == i) setHuntIndicator(false);// don't hunt myself
       // if i have greater score than remote player draw my name here
       drawPlayerScore(myTank, x1, x2, x3, (float)y);
@@ -944,7 +944,7 @@ void			HUDRenderer::renderScoreboard(void)
     y -= (int)dy;
   }
   if (!huntPlayerAlive && getHunting()) setHunting(false); //stop hunting if hunted player is dead
-  if (!drewMyScore && myTank->getCallSign()[0] != '@') {
+  if (!drewMyScore && (myTank->getTeam() != ObserverTeam)) {
 	  // if my score is smaller or equal to last remote player draw my score here
     drawPlayerScore(myTank, x1, x2, x3, (float)y);
     y -= (int)dy;
@@ -1547,7 +1547,7 @@ void			HUDRenderer::drawPlayerScore(const Player* player,
   const float emailWidth = minorFont.getWidth(email);
   const float flagWidth = minorFont.getWidth(flag);
   hudSColor3fv(Team::getRadarColor(player->getTeam()));
-  if (player->getCallSign()[0] != '@') {
+  if (player->getTeam() != ObserverTeam) {
     minorFont.draw(score, x1, y);
     minorFont.draw(kills, x2, y);
   }
