@@ -2,6 +2,7 @@
 
 			     BZFlag release notes
 
+* Observer is a first class team - Dave Brosius
 * AutoPilot from 1.8 - Dave Brosius
 * Thief Flag - Dave Brosius
 * MsgPlayerUpdate now has order, reject ooo packets - Dave Brosius
